<resources>
    <string name="app_name" translatable="false">HomeTracker</string>
    <string name="label_group_selection">Group Selection</string>
    <string name="label_profile">Profile</string>
    <string name="label_settings">Settings</string>
    <string name="label_group">Group</string>
    <string name="label_camera">Camera</string>
    <string name="label_search">Search</string>
    <string name="label_plus" translatable="false">+</string>
    <string name="label_create_group">Create group</string>
    <string name="label_login">Login</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="label_keep_user_signed_in">Keep me signed in</string>
    <string name="label_forgot_pw">Forgot password?</string>
    <string name="label_register">Register</string>
    <string name="label_email" translatable="false">E-Mail</string>
    <string name="label_create_shelf">Create Shelf</string>
    <string name="label_name">Name</string>
    <string name="label_loading">Loading</string>
    <string name="label_please_wait">Please wait</string>
    <string name="label_logout">Log out</string>
    <string name="toast_login_failed">Login failed!</string>
    <string name="toast_registration_failed">Registration failed!</string>
    <string name="toast_registration_success">Registration successful!</string>
    <string name="toast_groupcreation_success">"Group created: "</string>
    <string name="toast_groupcreation_failed">Creation failed!</string>
    <string name="toast_edittext_invalid">All fields must have between 4 and 64 characters and can only contain letters, numbers, spaces, \".\", \"_\", \"-\" and \"/\".</string>
    <string name="label_new_group">New group</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_ok" translatable="false">OK</string>
    <string name="toast_email_invalid">Invalid E-Mail address!</string>
    <string name="label_shelf">Shelf</string>
    <string name="toast_shelfcreation_failed">Shelf creation failed!</string>
    <string name="toast_shelfcreation_success">Shelf created!</string>
    <string name="toast_file_too_large">Image too large for upload!</string>
    <string name="label_minus" translatable="false">-</string>
    <string name="label_generate_qr">Generate QR-Code</string>
    <string name="label_item">Item</string>
    <string name="label_amount">Amount</string>
    <string name="label_no_value">~ no value ~</string>
    <string name="label_new_item">New item</string>
    <string name="label_create_item">Create item</string>
    <string name="toast_invalid_drawer_selection">Please select exactly one drawer on the image!</string>
    <string name="toast_itemcreation_failed">Item creation failed!</string>
    <string name="label_create_drawer">Create drawer</string>
    <string name="label_keyword">Attribute</string>
    <string name="format_update_keyword">Attribute \"%s\"</string>
    <string name="label_value">Value</string>
    <string name="label_update_keyword">Update attribute</string>
    <string name="toast_update_keyword_failed">Updating attribute failed!</string>
    <string name="label_map">Map</string>
</resources>
