<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- SEARCH -->
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/label_search"
        app:showAsAction="always" />

    <!-- MAP -->
    <item
        android:id="@+id/action_map"
        android:icon="@drawable/ic_map"
        android:title="@string/label_map"
        app:showAsAction="always"/>

    <!-- CAMERA -->
    <item
        android:id="@+id/action_camera"
        android:icon="@drawable/ic_camera"
        android:title="@string/label_camera"
        app:showAsAction="always" />

    <!-- PROFILE -->
    <item
        android:id="@+id/action_create_shelf"
        android:title="@string/label_create_shelf"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_profile"
        app:showAsAction="never"
        android:title="@string/label_profile">
    </item>

    <!-- SETTINGS -->
    <item
        android:id="@+id/action_settings"
        app:showAsAction="never"
        android:title="@string/label_settings">
    </item>

    <!-- SETTINGS -->
</menu>